apps/studio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: studio
  labels:
    pod-security.kubernetes.io/enforce: baseline
