apps/studio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: studio
  namespace: studio
spec:
  type: ClusterIP
  selector:
    app: studio
  ports:
    - port: 3000
      targetPort: 3000
